@@ -1,5 +1,5 @@
 [main]
-installer_version = '1.0.3.2';
+installer_version = '1.0.3.3';
 min_upgrade_version = '1.12'
 archive = 'data/data.tar.gz'
 dbtype = 'mysqli'
